# lariska

./: .env.example  .gitignore  CLAUDE.md  README.md  agents.md  junit.xml  pyproject.toml
.github/workflows/: pytest.yml
lariska/: __init__.py  __main__.py  agents.py  cli.py  config.py  db.py  providers.py  workflow.py
lariska/cli/: __init__.py  add_provider.py  create_agent.py  init_cmd.py  run.py
lariska/hooks/: Hook.py  __init__.py  card_assigned.py
lariska/trello/: __init__.py  client.py  notifications.py
lariska/workflow/: __init__.py  db.py  runner.py
tests/: test_cli.py  test_trello_notifications.py  test_workflow.py
